--- a/cineast_config/cineast10.json
+++ b/cineast_config/cineast10.json
@@ -207,8 +207,8 @@
     "serveContent": true,
     "serveUI": true,
     "uiLocation": "/home/ubuntu/vitrivr-ng/dist",
-    "thumbnailLocation": "./thumbnails-delete",
-    "objectLocation": "/mnt/hdd/test",
+    "thumbnailLocation": "./thumbnails",
+    "objectLocation": "/mnt/hdd/extractionV3C2/video_split10",
     "objectsFilesAreIDed": false
   },
   "monitoring": {
@@ -217,6 +217,6 @@
   },
   "jsonQuery": {
     "createFile": true,
-    "path": "./json-queries-delete"
+    "path": "./json-queries"
   }
 }
